# Waveguide_FEM_Solver

./: README.md  waveguide_fem_solver.py
waveguide-fem/: pyproject.toml
waveguide-fem/waveguide_fem/: __init__.py  solver.py
waveguide-fem/waveguide_fem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
